# api-router

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  apirouter.service  apirouter.sh
frontend/: index.html
src/: admin.rs  config.rs  converters.rs  main.rs  proxy.rs
