[package]
name = "apirouter"
version = "0.2.0"
edition = "2021"
description = "Local API Router - Multi-upstream proxy with failover"
authors = ["APIRouter Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"

# Concurrency
dashmap = "6"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
